--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -12,12 +12,12 @@
 
       <div class="text-center">Developed by:</div>
       <div class="text-center">
-        <h3>Deborah Kurata</h3>
+        <h3>Ayman Abd El-latief</h3>
       </div>
 
-      <div class="text-center">@deborahkurata</div>
+      <div class="text-center">@ayman</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="https://github.com/Ayman-Abdellatief">Ayman-Abdellatief</a>
       </div>
     </div>
   </div>
