Navigation and Routing Additional Techniques

--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -17,7 +17,7 @@
 
       <div class="text-center">@ayman</div>
       <div class="text-center">
-        <a href="https://github.com/Ayman-Abdellatief">Ayman-Abdellatief</a>
+        <a href="https://github.com/Ayman-Abdellatief"   target="_blank">Ayman-Abdellatief</a>
       </div>
     </div>
   </div>
