--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -2,4 +2,9 @@
     <div class="card-header">
         {{pageTitle+ ':  '+product.productName}}
     </div>
+    <div class="card-footer">
+        <button class="btn btn-outline-secondary" (click)="onBack()">
+            <li class="fa fa-chevron-left"></li>Back
+        </button>
+    </div>
 </div>
